Fix screen flickering on mac, add background patching

--- a/src/styles/launcher.css
+++ b/src/styles/launcher.css
@@ -109,3 +109,10 @@ video {
     opacity: 1;
   }
 }
+
+.patch-text {
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
+  color: gray;
+}
